--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.basgeekball:awesome-validation:1.3'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
 }
