--- a/covid/package.json
+++ b/covid/package.json
@@ -14,8 +14,11 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-background-fetch": "^3.0.4",
+    "react-native-background-task": "^0.2.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "^0.27.1",
+    "react-native-push-notification": "^3.1.9",
+    "react-native-queue": "^1.2.1",
     "react-native-web": "^0.12.2"
   },
   "devDependencies": {
