--- a/covid/package.json
+++ b/covid/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.8.1",
     "expo": "~36.0.0",
     "expo-permissions": "~8.0.0",
     "react": "~16.9.0",
