--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,22 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.basgeekball:awesome-validation:1.3'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+//    implementation "org.apache.poi:poi:3.17"
+//    implementation "org.apache.poi:poi-ooxml:3.17"
+//    implementation 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
+//    implementation 'com.google.api-client:google-api-client-android:1.23.0'
+    implementation 'com.android.volley:volley:1.1.0'
+//    implementation 'com.google.gdata.client.spreadsheet.SpreadsheetService';
+    implementation 'com.squareup.okhttp:okhttp:2.4.0'
+    implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
 }
 
 allprojects {
