--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CurrentLocation"></activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:name=".SideBar"
+            android:label="@string/title_activity_side_bar"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +23,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CurrentLocation" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
 
-        <receiver android:name=".AlarmReceiver"></receiver>
+        </activity>
+
+        <receiver android:name=".AlarmReceiver" />
+
+        <service android:name=".LocationTrack" />
     </application>
 
 </manifest>
