--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'androidx.preference:preference:1.1.0-rc01'
@@ -52,8 +53,8 @@ dependencies {
     implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
     implementation 'com.google.android.material:material:1.1.0'
     //noinspection GradleCompatible
-    implementation 'androidx.cardview:cardview:1.0.0'
-//    implementation 'android.arch.work:work-runtime:1.0.0-alpha09'
+    implementation 'android.arch.work:work-runtime:1.0.0-alpha09'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 }
 
 allprojects {
