--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -42,6 +43,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.basgeekball:awesome-validation:1.3'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.libraries.places:places:1.1.0'
 //    implementation "org.apache.poi:poi:3.17"
 //    implementation "org.apache.poi:poi-ooxml:3.17"
 //    implementation 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
@@ -54,7 +56,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     //noinspection GradleCompatible
     implementation 'android.arch.work:work-runtime:1.0.0-alpha09'
+    implementation 'com.android.support:multidex:1.0.3'
 //    implementation 'com.google.apis:google-api-services-youtube:v3-rev20200312-1.30.9'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 }
 
