--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,12 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
         android:debuggable="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher_foreground_final"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -30,10 +32,18 @@
         android:testOnly="false"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        android:hardwareAccelerated="true"
         tools:ignore="HardcodedDebugMode">
-        <activity android:name=".AboutusActivity"
-            android:label="About us"/>
+        <activity
+            android:name=".TermsScrollingActivity"
+            android:label="@string/title_activity_terms_scrolling"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".PrivacyScrollingActivity"
+            android:label="@string/title_activity_privacy_scrolling"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AboutusActivity"
+            android:label="About us" />
         <activity
             android:name=".YouTubeActivity"
             android:label="@string/title_activity_you_tube"
@@ -78,10 +88,10 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity
+            android:name=".SideBarActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
-            android:name=".SideBarActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
