--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.covid_19">
+    package="live.combatemic">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -34,23 +34,23 @@
         android:usesCleartextTraffic="true"
         tools:ignore="HardcodedDebugMode">
         <activity
-            android:name=".TermsScrollingActivity"
+            android:name="live.combatemic.TermsScrollingActivity"
             android:label="@string/title_activity_terms_scrolling"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".PrivacyScrollingActivity"
+            android:name="live.combatemic.PrivacyScrollingActivity"
             android:label="@string/title_activity_privacy_scrolling"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".AboutusActivity"
+            android:name="live.combatemic.AboutusActivity"
             android:label="About us" />
         <activity
-            android:name=".YouTubeActivity"
+            android:name="live.combatemic.YouTubeActivity"
             android:label="@string/title_activity_you_tube"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <service
-            android:name=".Common.MyFirebaseMessagingService"
+            android:name="live.combatemic.Common.MyFirebaseMessagingService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -59,19 +59,19 @@
         </service>
 
         <activity
-            android:name=".CityScrollingActivity"
+            android:name="live.combatemic.CityScrollingActivity"
             android:label="@string/title_activity_city_scrolling" />
         <activity
-            android:name=".QuestionAnswerActivity"
+            android:name="live.combatemic.QuestionAnswerActivity"
             android:label="@string/menu_faq" />
         <activity
-            android:name=".ContactActivity"
+            android:name="live.combatemic.ContactActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ProfileActivity" />
+        <activity android:name="live.combatemic.ProfileActivity" />
         <activity
-            android:name=".SettingsActivity"
+            android:name="live.combatemic.SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".RegistrationActivity" />
+        <activity android:name="live.combatemic.RegistrationActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -85,10 +85,10 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name="live.combatemic.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".SideBarActivity"
+            android:name="live.combatemic.SideBarActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
@@ -97,9 +97,9 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProfileFragment" />
+        <activity android:name="live.combatemic.ProfileFragment" />
         <activity
-            android:name=".MainActivity"
+            android:name="live.combatemic.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -109,9 +109,9 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".AlarmReceiver" />
+        <receiver android:name="live.combatemic.AlarmReceiver" />
 
-        <service android:name=".LocationTrack" />
+        <service android:name="live.combatemic.LocationTrack" />
     </application>
 
 </manifest>
