--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,14 +45,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.basgeekball:awesome-validation:1.3'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-//    implementation  'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.2.0'
-//    implementation "org.apache.poi:poi:3.17"
-//    implementation "org.apache.poi:poi-ooxml:3.17"
-//    implementation 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
-//    implementation 'com.google.api-client:google-api-client-android:1.23.0'
     implementation 'com.android.volley:volley:1.1.1'
-//    implementation 'com.google.gdata.client.spreadsheet.SpreadsheetService';
     implementation 'com.squareup.okhttp:okhttp:2.4.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
@@ -60,20 +54,16 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'android.arch.work:work-runtime:1.0.1'
     implementation 'com.android.support:multidex:1.0.3'
-//    implementation 'com.google.apis:google-api-services-youtube:v3-rev20200312-1.30.9'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-core:17.3.0'
     // this line must be included to integrate with Firebase
-//    //noinspection GradleCompatible
+    //noinspection GradleCompatible
     implementation 'com.google.firebase:firebase-messaging:20.1.5'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
     implementation 'info.androidhive:fontawesome:0.0.5'
     implementation 'com.squareup.picasso:picasso:2.71828'
-//    implementation 'com.google.api-client:google-api-client:1.30.9'
-//    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
-//    implementation 'com.google.apis:google-api-services-youtube:v3-rev20200109-1.30.8'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 }
 
