--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "live.combatemic.app"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 2
-        versionName "0.9.0"
+        versionCode 6
+        versionName "1.1.0"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     //noinspection GradleCompatible
     implementation 'com.android.support:percent:23.3.0'
+    implementation 'com.github.florent37:viewtooltip:1.2.2'
 }
 
 allprojects {
